Fix about text on mobile.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -753,7 +753,7 @@ footer {
         text-align: center;
 
         p {
-            text-align: left;
+            text-align: center;
         }
     }
     .projects-grid {
